Fix PR c++/45383

Reverting the fix for PR c++/42260 fixes c++/45383.
This reverts commit r155415.

gcc/cp/
	Reverted patch for PR c++/42260
	* cp-tree.h (lookup_conversions): Reverted "Add new bool parameter to
	declarationE."
	* search.c (lookup_conversion): Reverted "Use new bool parameter in
	definition".
	* call.c (add_builtin_candidates): Reverted "Don't lookup template
          conversion"
	(convert_class_to_reference, build_user_type_conversion_1,
	 build_op_call): Reverted "Adjust".
	* cvt.c (build_expr_type_conversion): Reverted "Likewise".

gcc/testsuite/
	Reverted patch for PR c++/42260
	* conversion/cast2.C: Reverted New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@167248 138bc75d-0d04-0410-961f-82ee72b054a4